package main.java.data.dto.element;

public class RowElementDto extends AbstractElementDto {
    // Not implemented yet.
}
