package main.java.model.structure.card.element.control;

public interface ControlElement {
    // Marker interface.
}
