package main.java.model.structure.card.element.parent.row;

public enum HorizontalAlignment {
    // Place the children as close to the middle of the horizontal axis as possible.
    CENTER,

    // Place the free space evenly between the children as well as half of that space before and
    // after the first and last child.
    SPACE_AROUND,

    // Place the free space evenly between the children.
    SPACE_BETWEEN,

    // Place the free space evenly between the children as well as before and after the first and
    // last child.
    SPACE_EVENLY
}
